added list of abbreviations

--- a/latex/Intro.tex
+++ b/latex/Intro.tex
@@ -10,7 +10,8 @@ The first instinct of this candidate was to just try some conversion rate (say s
 \emph{This is very much a first draft, and only my thoughts around what I understand as the basis of the thesis.}\\
 Though the scope of this thesis might seem a bit \emph{sought}, it is in fact a real world concern from the computational neuroscience group at UMB. 
 Their work contains network simulations of neurons, which they are trying to tweak with experimental data. 
-The experimental data come from measurements of voltage levels in the Extra Cellular Space (ECS). 
+The experimental data come from measurements of voltage levels in the Extra Cellular Space (ECS\nomenclature{ECS}{Extra Cellular Space}). 
+
 The ECS is, essentially, the space which separates neurons and has an immensely complicated geometry as we can see from figure \ref{ECS_picture}. 
 The width of the ECS varies, but is in general $\sim1\mu$m. 
 Parts of the ECS is, however, much narrower. In the ECS there are a number of diffusion governed transport mechanisms which are vital for the function of the neurons. 
