--- a/latex/main.tex
+++ b/latex/main.tex
@@ -14,6 +14,7 @@
 \usepackage{nomencl}
 \makenomenclature
 
+\usepackage{pdfpages}
 \usepackage[backend=bibtex]{biblatex}
 % \bibliography{bibtex_ref_test.bib}
 \bibliography{references.bib}
@@ -47,8 +48,8 @@
 
 \begin{document}
 
-
-\maketitle
+\includepdf{frontpage.pdf}
+\cleardoublepage
 
 % \begin{abstract}
 % This is an abstract text.
