some more writing

--- a/latex/software.tex
+++ b/latex/software.tex
@@ -89,4 +89,7 @@ There are really very few dependencies on the PDE-solver, seeing as it is mostly
 \end{itemize}
 As discussed, the implementation of random walks on parts of the mesh will reduce the convergence-rate to 0.5, and so there are really only two reasons to implement a new PDE solver. 
 The current one only implements Neumann boundaries, and consequently must either be modified or replaced in order to work with other boundary conditions.
-It also only works on a square mesh. As discussed in section \ref{} it will be immensely complicated to implement a grid transformation, and this is already implemented in most finite element software.
+It also only works on a square mesh. As discussed in section \ref{geometry} it will be immensely complicated to implement a grid transformation, and this is already implemented in most finite element software.
+
+\section{Model problem}
+
