--- a/latex/theory.tex
+++ b/latex/theory.tex
@@ -338,7 +338,7 @@ There are quite a lot of methods to produce pseudo-random numbers \emph{cite a r
 
 \subsubsection{ran0}
 
-This is a simple RNG borrowed from \cite{jensen2013computational}. 
+This is a simple RNG borrowed from \cite{hjorth2011computational}. 
 It is very fast, and simple to implement and use given that you know the engineered unlikely numbers it uses. 
 The period of ran0 on the other hand is rather small, only $\sim 10^8$. For short simulations this will not be a problem, however.
 
