--- a/latex/references.bib
+++ b/latex/references.bib
@@ -36,3 +36,10 @@
 	title = "{Spines and neurite branches function as geometric attractors that enhance protein kinase C action}"
 }
 
+@article{hjorth2011computational,
+	author = "Hjorth-Jensen, Morten",
+	journal = "Lecture notes",
+	title = "{Computational physics}",
+	year = "2011"
+}
+
